<resources>
    <string name="app_name">MediTrack</string>
    <string name="logout">LOGOUT</string>
    <string name="full_name">%s %s</string>
    <string name="slide_menu_image">Slide Menu Image</string>
    <string name="top_right_shape">Top-Right Shape</string>
    <string name="login">Login</string>
    <string name="fragment_login_subtitle">Please sign in to continue</string>
    <string name="email">Email</string>
    <string name="medicinemfgdate">Mfg. Date</string>
    <string name="medicineexpirydate">Exp. Date</string>
    <string name="medicinename">Medicine Name</string>
    <string name="dosageinfo">Dosage</string>
    <string name="password">Password</string>
    <string name="medicinequantity">Quantity of Medicine</string>
    <string name="frequency">Frequency (e.g., daily, weekly) *</string>
    <string name="administrationtime">Time(s)/day should take medicine *</string>
    <string name="specialinstruction">Special Instructions</string>
    <string name="doctorinfo">Doctor Name</string>
    <string name="notesorcomments">Notes/Comments</string>
    <string name="not_account_text">Don\'t have an account?</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="password_format_text">Password Format Instructions:</string>
    <string name="password_format_dis">• At least one number, upper, lower, symbol, length 8 to 16</string>
    <string name="bottom_left_shape">Bottom-Left Shape</string>
    <string name="registration">Registration</string>
    <string name="profile">Profile</string>
    <string name="additionaldetailtext">Add Additional Details</string>
    <string name="addmedicine">Add Medicine</string>
    <string name="medicinelist">List of Medicines</string>
    <string name="fragment_registration_subtitle">Please sign up to continue</string>
    <string name="fragment_addmedicine_subtitle">Add medicine details here</string>
    <string name="fragment_checkmedicinestock_subtitle">Check list of medicines here</string>
    <string name="user_profile_image">User Profile Image</string>
    <string name="add_medicine_image">Add Medicine Image</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="medicinepurpose">Purpose of Medicine</string>
    <string name="register">Register</string>
    <string name="addmedicinebtn">Add Medicine</string>
    <string name="account_login_text">Already have an account?</string>
    <string name="slide_menu_user_profile_image">Slide Menu User Profile Image</string>
    <string name="account_details">Account Details</string>
    <string name="account_details_image">Account Details Image</string>
    <string name="setting_image">Setting Image</string>
    <string name="settings">Settings</string>
    <string name="delete_account_image">Delete Account Image</string>
    <string name="delete_account">Delete Account</string>
    <string name="no_text_found">Couldn\'t Find any text in here…</string>
    <string name="error_default_msg">Oops , Something went wrong</string>
    <string name="camera_error_default_msg">Oops , Couldn\'t get image from camera</string>
    <string name="permission_denied_msg">Permissions not granted by the user.</string>
    <string name="clipboard_text">Copied to Clipboard</string>
    <string name="torch_not_available_msg">Oops , Torch Not Available</string>
    <string name="share_text_title">Share via</string>
    <string name="text_in_image">Text In Image</string>
    <string name="copy_to_clipboard">Copy To ClipBoard</string>
    <string name="close_dialog">Close Dialog</string>
    <string name="torch_button">Torch Button</string>
    <string name="share_text">Share Text</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">John Doe</string>
    <string name="nav_header_subtitle">johnDoe@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>



    <string name="Topical_Dec">These are creams, lotions or ointments applied directly onto the skin. They come in tubs, bottles or tubes depending on the type of medicine. The active part of the medicine is mixed with another substance, making it easy to apply to the skin.</string>
    <string name="Drops_Dec">These are often used where the active part of the medicine works best if it reaches the affected area directly. They tend to be used for eye, ear or nose.</string>
    <string name="Inhaler_Dec">The active part of the medicine is released under pressure directly into the lungs. Young children may need to use a ‘spacer’ device to take the medicine properly. Inhalers can be difficult to use at first so your pharmacist will show you how to use them.</string>
    <string name="Injection_Dec">There are different types of injection, in how and where they\'re injected. Subcutaneous or SC injections are given just under the surface of the skin. Intramuscular or IM injections are given into a muscle. Intrathecal injections are given into the fluid around the spinal cord. Intravenous or IV injections are given into a vein. Some injections can be given at home but most are given at your doctor’s surgery or in hospital.</string>
    <string name="Implants_or_Patches_Dec">These medicines are absorbed through the skin, such as nicotine patches for help in giving up smoking, or contraceptive implants.</string>
    <string name="Tablets_Dec">The active ingredient is combined with another substance and pressed into a round or oval solid shape. There are different types of tablet. Soluble or dispersible tablets can safely be dissolved in water.</string>
    <string name="Capsules_Dec">The active part of the medicine is contained inside a plastic shell that dissolves slowly in the stomach. You can take some capsules apart and mix the contents with your child’s favourite food. Others need to be swallowed whole, so the medicine isn’t absorbed until the stomach acid breaks down the capsule shell.</string>
    <string name="Liquid_Dec">The active part of the medicine is combined with a liquid to make it easier to take or better absorbed. A liquid may also be called a ‘mixture’, ‘solution’ or ‘syrup’. Many common liquids are now available without any added colouring or sugar.</string>

    <string name="medicine_filter_title">Sort &amp; Filter</string>
    <string name="filter_sheet_label_sort_by">Sort by</string>
    <string name="filter_sheet_label_filter">Apply Filters</string>
    <string name="action_apply">Apply</string>
    <string name="action_reset_all">Reset All</string>
    <string name="filterandsorttext">Filter&amp;Sort</string>

    <string name="notificationpicktime">Time (HH:MM:SS AM/PM)</string>

    <string name="about_project_details">Personalized Medicine Track Mobile Application</string>

    <string name="college_details">
    <![CDATA[
        <b>College Name:</b> <i>Your College Name</i> <br/>
        <b>Location:</b> <i>College Location</i> <br/>
        <b>Established:</b> <i>Year of Establishment</i> <br/>
        <b>Accreditation:</b> <i>Accreditation Details</i> <br/>
        <b>Programs Offered:</b> <i>List of Programs</i> <br/><br/>

        <b>Overview:</b> <i>Brief overview of the college, including its mission, vision, and values.</i> <br/><br/>

        <b>Contact Information:</b> <br/>
        <i>Address:</i> College Address <br/>
        <i>Phone:</i> College Phone Number <br/>
        <i>Email:</i> College Email Address <br/>
        <i>Website:</i> College Website <br/>
    ]]>
    </string>

    <string name="team_member_details">
    <![CDATA[
        <b>Team Member 1</b> <br/>
        <i>Role:</i> Developer <br/>
        <i>About:</i> Add details about the team member\'s background, skills, and contributions. <br/><br/>

        <b>Team Member 2</b> <br/>
        <i>Role:</i> Designer <br/>
        <i>About:</i> Add details about the team member\'s expertise, design concepts, and contributions. <br/><br/>

        <b>Team Member 3</b> <br/>
        <i>Role:</i> Project Manager <br/>
        <i>About:</i> Add details about the team member\'s project management experience, leadership skills, and contributions. <br/><br/>
    ]]>
    </string>


</resources>