<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addMedi_name_modified_txtInpLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        style="@style/normalTextBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addMedi_name_modified_txtInpEditTxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/medicinename"
            style="@style/FormTextBox"
            android:drawablePadding="10dp"
            android:textSize="@dimen/_10sdp"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:fontFamily="@font/comfortaa_regular"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dosage_modified_txtInpLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        style="@style/normalTextBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dosage_modified_txtInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/dropper_dosage_svgrepo_com"
            android:drawablePadding="10dp"
            android:fontFamily="@font/comfortaa_regular"
            android:hint="@string/dosageinfo"
            android:inputType="numberDecimal"
            style="@style/FormTextBox"
            android:padding="10dp"
            android:textSize="@dimen/_10sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/medicine_quantity_modified_TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/normalTextBox"
        android:layout_margin="12dp"
        android:layout_marginTop="@dimen/_12sdp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/medicine_quantity_modified_TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/medicinequantity"
            style="@style/FormTextBox"
            android:drawableStart="@drawable/ic_add_medicine"
            android:drawablePadding="10dp"
            android:textSize="@dimen/_10sdp"
            android:padding="10dp"
            android:inputType="numberDecimal"
            android:fontFamily="@font/comfortaa_regular"/>
    </com.google.android.material.textfield.TextInputLayout>





</LinearLayout>