<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add_medicine_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".homeActivity.medicine.addMedicine.AddMedicineFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/top_right_shape"
                android:src="@drawable/shape"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="-40dp"
                android:layout_marginEnd="-40dp"/>
            <ImageView
                android:id="@+id/fragment_login_top_shape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/top_right_shape"
                android:src="@drawable/shape2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="-70dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginHorizontal="20dp"
                        android:text="@string/addmedicine"
                        android:textSize="@dimen/_25sdp"
                        android:fontFamily="@font/comfortaa_bold"
                        android:textColor="@color/prusianblue"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginHorizontal="20dp"
                        android:text="@string/fragment_addmedicine_subtitle"
                        android:textSize="@dimen/_10sdp"
                        android:fontFamily="@font/comfortaa_regular"
                        android:textColor="@color/lightblack"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/profile_image_layout"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/circle_image">
                    <ImageView
                        android:id="@+id/medicine_image"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:paddingVertical="@dimen/_10sdp"
                        android:src="@drawable/round_medication_24"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:contentDescription="@string/add_medicine_image" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="10dp">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/fragment_medicine_name_TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:helperTextEnabled="true"
                        app:helperText="Required"
                        app:helperTextTextColor="@color/prusianblue">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fragment_medicine_name_TextInputEditText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableStart="@drawable/round_mail_24"
                            android:drawablePadding="10dp"
                            android:fontFamily="@font/comfortaa_regular"
                            android:hint="@string/medicinename"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/prusianblue"
                            android:padding="10dp"
                            android:textSize="@dimen/_10sdp" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <!--            <TextView-->
                    <!--                android:layout_width="wrap_content"-->
                    <!--                android:layout_height="wrap_content"-->
                    <!--                android:text="Email:"-->
                    <!--                android:textSize="18dp"-->
                    <!--                android:textColor="@color/black"/>-->


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/fragment_medicine_expirydate_TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:helperTextEnabled="true"
                        app:helperText="Required"
                        app:helperTextTextColor="@color/prusianblue"
                        android:layout_marginTop="@dimen/_3sdp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fragment_medicine_expirydate_TextInputEditText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableStart="@drawable/round_date_range_24"
                            android:drawablePadding="10dp"
                            android:fontFamily="@font/comfortaa_regular"
                            android:hint="@string/medicineexpirydate"
                            android:inputType="none"
                            android:focusable="false"
                            android:clickable="true"
                            android:textColor="@color/prusianblue"
                            android:padding="10dp"
                            android:textSize="@dimen/_10sdp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!--            <TextView-->
                    <!--                android:layout_width="wrap_content"-->
                    <!--                android:layout_height="wrap_content"-->
                    <!--                android:text="Mobile No.:"-->
                    <!--                android:textSize="18dp"-->
                    <!--                android:textColor="@color/black"-->
                    <!--                android:layout_marginTop="10dp"/>-->

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/fragment_registration_password_TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:helperTextEnabled="true"
                        app:helperText="Required"
                        app:helperTextTextColor="@color/prusianblue"
                        android:layout_marginTop="@dimen/_3sdp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fragment_medicine_quantity_TextInputEditText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/medicinequantity"
                            android:textColor="@color/prusianblue"
                            android:drawableStart="@drawable/medicine_icon"
                            android:drawableTint="@color/prusianblue"
                            android:drawablePadding="10dp"
                            android:textSize="@dimen/_10sdp"
                            android:padding="10dp"
                            android:inputType="numberDecimal"
                            android:fontFamily="@font/comfortaa_regular"/>
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/fragment_registration_confirm_password_TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:helperTextEnabled="true"
                        app:helperText="Required"
                        app:helperTextTextColor="@color/prusianblue"
                        android:layout_marginTop="@dimen/_3sdp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fragment_medicine_purpose_password_TextInputEditText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/medicinepurpose"
                            android:textColor="@color/prusianblue"
                            android:drawableStart="@drawable/virus_patient"
                            android:drawablePadding="10dp"
                            android:textSize="@dimen/_10sdp"
                            android:padding="10dp"
                            android:inputType="text"
                            android:fontFamily="@font/comfortaa_regular"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <!--            <com.google.android.material.button.MaterialButton-->
                    <!--                android:layout_width="wrap_content"-->
                    <!--                android:layout_height="25dp"-->
                    <!--                android:paddingVertical="0dp"-->
                    <!--                android:layout_marginTop="10dp"-->
                    <!--                android:layout_gravity="end"-->
                    <!--                android:gravity="center_vertical"-->
                    <!--                android:text="Get OTP"-->
                    <!--                android:textSize="10dp"-->
                    <!--                android:textColor="@color/greentype"-->
                    <!--                app:backgroundTint="@null"-->
                    <!--                android:background="@drawable/button_outlined"-->
                    <!--                app:icon="@drawable/noun_otp_4051175"-->
                    <!--                app:iconTint="@color/greentype"-->
                    <!--                app:iconGravity="textStart"/>-->
                    <!--            <TextView-->
                    <!--                android:layout_width="wrap_content"-->
                    <!--                android:layout_height="wrap_content"-->
                    <!--                android:text="Enter OTP:"-->
                    <!--                android:textSize="18dp"-->
                    <!--                android:textColor="@color/black"-->
                    <!--                android:layout_marginTop="15dp"/>-->
                    <!--            <com.google.android.material.textfield.TextInputLayout-->
                    <!--                android:layout_width="match_parent"-->
                    <!--                android:layout_height="wrap_content"-->
                    <!--                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->
                    <!--                <com.google.android.material.textfield.TextInputEditText-->
                    <!--                    android:layout_width="match_parent"-->
                    <!--                    android:layout_height="match_parent"-->
                    <!--                    android:hint="Enter OTP"-->
                    <!--                    android:textColor="@color/prusianblue"-->
                    <!--                    android:drawableLeft="@drawable/round_password_24"-->
                    <!--                    android:drawablePadding="10dp"-->
                    <!--                    android:maxLines="1"-->
                    <!--                    android:singleLine="true"/>-->
                    <!--            </com.google.android.material.textfield.TextInputLayout>-->
                    <!--            <TextView-->
                    <!--                android:layout_width="wrap_content"-->
                    <!--                android:layout_height="wrap_content"-->
                    <!--                android:text="Resend OTP"-->
                    <!--                android:textColor="@color/greentype"-->
                    <!--                android:layout_marginTop="3dp"-->
                    <!--                android:layout_marginLeft="5dp"/>-->
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/fragment_medicine_add_button"
                        android:layout_width="@dimen/_165sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="30dp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:text="@string/addmedicinebtn"
                        android:textColor="@color/white"
                        app:backgroundTint="@null"
                        android:background="@drawable/button_background"
                        app:icon="@drawable/round_add_circle_outline_24"
                        app:iconGravity="textEnd"
                        android:layout_gravity="end"
                        android:fontFamily="@font/comfortaa_bold"
                        app:iconTint="@color/white" />
                </LinearLayout>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>